fix css issue causing editor to overlap header

--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -1,15 +1,18 @@
 .text-editor {
-  height: 0;
-  padding-bottom: 100%;
+  height: 100%;
+  width: 50%;
   position: relative;
+  z-index: 1;
 }
 
 .text-editor-container {
+  position: relative;
   width: 100%;
   overflow: hidden;
 }
 
 .text-editor-header {
+  position: relative;
   width: 100%;
   min-height: 20px;
   color: #E0E0E0;
