--- a/app/css/terminal.css
+++ b/app/css/terminal.css
@@ -3,6 +3,7 @@
   width: 50%;
   height: 100%;
   cursor: text;
+  z-index: 1;
 }
 
 .terminal-header {
